<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_app"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="home.myapplication.view.UserActivity">

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_user"
        android:textSize="24dp"
        android:id="@+id/title_user" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/title_name_user"
        android:text="@string/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24dp" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/title_email_user"
        android:text="@string/title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/title_score_user"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_score"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/title_hits_user"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_hits"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_continue_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_lolipop_bg"
        android:text="@string/btn_continue"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="100dp"
        />

</LinearLayout>
