<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@color/bg_app"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/title_menu"
            android:gravity="center"
            android:id="@+id/title_menu" />

        <Button
            android:id="@+id/btn_user_menu"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dip"
            android:background="@color/btn_lolipop_bg"
            android:text="@string/btn_user"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_camera_menu"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dip"
            android:background="@color/btn_lolipop_bg"
            android:text="@string/btn_camera"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_special_product_menu"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dip"
            android:background="@color/btn_lolipop_bg"
            android:text="@string/btn_special_product"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_favourite_menu"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dip"
            android:background="@color/btn_lolipop_bg"
            android:text="@string/btn_favourite"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_logout_menu"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dip"
            android:background="@color/btn_lolipop_bg"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_exit_menu"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dip"
            android:background="@color/btn_lolipop_bg"
            android:text="@string/btn_exit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

</RelativeLayout>