<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/btn_lolipop_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/email_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login" />

        <!-- Comento esto debido a que se intentaba implemetar el login de fecebook-->
        <!--&lt;!&ndash;<com.facebook.login.widget.ProfilePictureView&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/picture"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_gravity="center"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_marginTop="20dp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="200sp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="200sp"/>&ndash;&gt;-->

        <!--&lt;!&ndash;&lt;!&ndash; Link to Login Facebook Screen &ndash;&gt;&ndash;&gt;-->
        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/login_face_button"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content" />-->

        <!-- Link to Register Screen -->
        <Button
            android:id="@+id/btn_link_to_register_screen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>